# case-mle-picpay

./: README.md  pyproject.toml
data_analysis/: README.md  extractor.py  pokemon_data_analysis.py
microservice/: Dockerfile  Makefile  README.md  docker-compose.infra.yaml  docker-compose.yaml  dockerfile  requirements.txt
microservice/app/: config.py  main.py
microservice/app/routers/: models.py  predictions.py
microservice/app/schemas/: requests.py
microservice/app/services/: __init__.py  mlflow_registry.py  model_manager.py  ner_service.py
microservice/app/storage/: __init__.py  history.py  mongo_history.py  redis_history.py
microservice/tests/: requirements-test.txt
microservice/tests/fakes/: history_fake.py  mlflow_fake.py  spacy_fake.py
microservice/tests/integration/: test_health.py  test_list.py  test_load.py  test_models.py  test_predict.py
microservice/tests/unit/: test_config.py
microservice/tests/unit/schemas/: test_schemas.py
microservice/tests/unit/services/: test_mlflow_registry.py  test_model_manager.py  test_ner_service.py
tests/: conftest.py  pytest.ini  requirements-test.txt
tests/integration/: README.md  conftest.py  test_list.py  test_models.py  test_models_router.py  test_predict.py  test_predictions_router.py
tests/unit/: README.md  conftest.py  test_config.py
tests/unit/schemas/: test_schemas.py
tests/unit/services/: test_mlflow_registry.py  test_model_manager.py  test_ner_service.py
tests/unit/storage/: test_history_factory.py  test_history_inmemory.py  test_memory_history.py  test_redis_history.py
(+2 files in other folders)
